[package]
name = "kaish-types"
description = "Pure data types for kaish — structured output, values, tool schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
schemars = { version = "1", optional = true }
tokio-util = { workspace = true }

[features]
schema = ["dep:schemars"]

[lints]
workspace = true

# Browser clock: std's SystemTime::now()/Instant::now() are unsupported
# (panic) on wasm32-unknown-unknown; kaish_types::clock routes acquisition
# through the JS clock there. Native and WASI builds never see this dep.
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-time = "1"
