[package]
name = "kaish-vfs"
description = "kaish VFS contract: the Filesystem trait and the LocalFs/MemoryFs backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kaish-types = { path = "../kaish-types", version = "0.9.1", features = [] }
async-trait = { workspace = true }
# DevFs's /dev/urandom pulls from the OS CSPRNG. Pure (no tokio); works on
# Unix/macOS/WASI.
getrandom = { workspace = true }

# Only the backends need tokio; the trait itself is runtime-free. Gated so
# the bare trait-only build never pulls it. `LocalFs` needs `tokio/fs`;
# `MemoryFs` needs only `tokio/sync` (no runtime, works on wasm).
tokio = { version = "1", features = [], optional = true }

[features]
default = []
# The real-filesystem backend. Off → only the `Filesystem` trait + `DirEntry`,
# which is what the in-memory/wasm sandbox needs. `tokio/rt` is required for
# the direct `spawn_blocking` in `LocalFs::set_mtime` — without it the crate
# only compiled when a workspace sibling unified `rt` in (latent in 0.8.0).
localfs = ["dep:tokio", "tokio/fs", "tokio/rt"]
# The in-memory backend (`/v`, tests, conventional overlay upper).
memory = ["dep:tokio", "tokio/sync"]
# Copy-on-write OverlayFs (docs/kaish-overlayfs.md). Pair with `memory` for
# the conventional `OverlayFs::over(lower)` constructor.
overlay = ["dep:tokio", "tokio/sync"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
